--- a/style.css
+++ b/style.css
@@ -13,12 +13,15 @@ nav {
   padding: 20px;
 }
 .nav-menu {
-  width: 800px;
+  width: 1100px;
   height: 60px;
   background-color: rgb(196, 230, 205, 0.7);
+  border: 5px solid #d4cfcf;
+
   display: flex;
   align-items: center;
   padding: 20px;
+  margin: 0 auto;
 }
 .control-panel {
   display: flex;
@@ -31,11 +34,11 @@ button {
   border: none;
 }
 button {
-  width: 75px;
+  min-width: 75px;
   height: 30px;
   background-color: rgba(47, 168, 80, 0.7);
-  border-radius: 15px;
   outline: none;
+  padding: 0 15px;
 
   color: #fff;
   font-size: 14px;
@@ -50,19 +53,15 @@ button:focus {
 .current-data {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: flex-end;
   flex-grow: 1;
   margin-left: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 .points,
 .timer {
   width: 75px;
   height: 30px;
   background-color: rgba(47, 168, 80, 0.7);
-  border-radius: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -78,6 +77,14 @@ button:focus {
   margin-left: 10px;
 }
 /* game place  */
+.container {
+  width: 100vw;
+  height: auto;
+  padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 .game-container {
   position: relative;
   display: flex;
@@ -86,10 +93,10 @@ button:focus {
   height: 409px;
   border: 5px solid #d4cfcf;
   margin-top: 50px;
-  margin-left: 155px;
   overflow: hidden;
+  margin-right: 50px;
 }
-.game-container div {
+.game-container .cube {
   width: 100px;
   height: 100px;
 }
@@ -104,11 +111,20 @@ button:focus {
   display: none;
   position: absolute;
   background-color: rgb(196, 230, 205, 0.7);
-  width: 510px;
-  height: 409px;
   z-index: 100;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.results {
+  width: 300px;
+  height: 410px;
+  border: 1px solid yellow;
   margin-top: 50px;
-  margin-left: 155px;
+  border: 5px solid #d4cfcf;
+  padding: 10px;
+  margin-left: 50px;
 }
 .block {
   display: block;
@@ -116,4 +132,69 @@ button:focus {
 .removeCube {
   transform: scale(1.1);
   transform: rotate(360deg);
+}
+/* result place  */
+.result-title {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(47, 168, 80, 0.7);
+}
+h1 {
+  font-size: 24px;
+  color: #fff;
+}
+.achievements {
+  width: 100%;
+  border: 2px solid rgba(47, 168, 80, 0.7);
+  padding: 5px;
+  margin-top: 12px;
+  display: flex;
+}
+.user-name {
+  flex-grow: 1;
+  font-weight: 600;
+  font-size: 18px;
+  color: #7b7e79;
+}
+.achievement {
+  color: green;
+}
+/* modal window  */
+.modal {
+  position: absolute;
+  width: 500px;
+  height: auto;
+  padding: 10px;
+  border: 5px solid #d4cfcf;
+  z-index: 150;
+  background-color: #fff;
+  top: 50px;
+  left: 50%;
+  margin-left: -250px;
+  display: none;
+}
+.modal-title {
+  width: 100%;
+  height: 50px;
+  background-color: rgba(47, 168, 80, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 50px;
+}
+.input-name {
+  width: 100%;
+  border: 2px solid rgba(47, 168, 80, 0.7);
+  padding: 5px;
+  font-size: 18px;
+}
+.input-name:focus {
+  border: 2px solid rgba(47, 168, 80, 0.7);
+}
+.modal button {
+  width: 150px;
+  margin: 20px 0;
 }
