--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ nav {
   padding: 20px;
 }
 .nav-menu {
-  width: 1100px;
+  max-width: 1100px;
   height: 60px;
   background-color: rgb(196, 230, 205, 0.7);
   border: 5px solid #d4cfcf;
@@ -33,7 +33,10 @@ button {
   background: none;
   border: none;
 }
-button {
+.start,
+.new-game,
+.save-results,
+.cansel-save {
   min-width: 75px;
   height: 30px;
   background-color: rgba(47, 168, 80, 0.7);
@@ -49,6 +52,30 @@ button {
 }
 button:focus {
   background-color: rgba(15, 119, 43, 0.7);
+}
+.cansel-save {
+  background-color: rgb(43, 43, 248);
+}
+.volume {
+  width: 30px;
+  height: 30px;
+  background-color: rgba(47, 168, 80, 0.7);
+  outline: none;
+  padding: 0 5px;
+
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+  margin-left: 20px;
+  cursor: pointer;
+  transition: 1s ease-out;
+}
+select {
+  min-width: 100px;
+  height: 30px;
+  margin-left: 20px;
+  outline: none;
+  border: 2px solid rgba(15, 119, 43, 0.7);
 }
 .current-data {
   display: flex;
